# Attendance

./: .env  .gitignore  README.md  alembic.ini  app_config.yaml  pyproject.toml
app/: initialiser.py  log.yaml  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: att_records.py  auth.py  calender.py
app/core/: auth.py  config.py  constants.py
app/crud/: __init__.py  base.py  crud_att_records.py  crud_calendar.py  crud_user.py
app/database/: initialise.py
app/models/: __init__.py  att_records.py  calendar.py  user.py
app/schemas/: __init__.py  att_records.py  calendar.py  user.py
app/tests/: conftest.py
app/utils/: constants.py  misc.py  platform_exception.py  platform_logging.py  utils.py
migrations/: env.py
migrations/versions/: d12169a27700_create_calender.py
